syntax = "proto3";

option csharp_namespace = "Saapp.AndroidAPI.Endpoints.GRPC.Sales.SalesCoefficientGoods.Protos";
option java_multiple_files = true;
option java_package = "com.saphamrah.protos";
option java_outer_classname = "SalesCoefficientGoodsProto";
option objc_class_prefix = "HLW";

package Sales;

service SalesCoefficientGoods{
	rpc GetSalesCoefficientGoods(SalesCoefficientGoodsRequest) returns(SalesCoefficientGoodsReplyList);
}

message SalesCoefficientGoodsRequest{

string BinID = 1;
string SellerID = 2;
string DistributerID=3;
string GroupsID = 4;


}

message SalesCoefficientGoodsReply{
int32	SalesCoefficientGoodsID =1;
int32	CodeGoodsID=2;
int32	CustomerGroupID=3;
int32	SalesCoefficient=4;
int32	Degree=5;


}

message SalesCoefficientGoodsReplyList{
	repeated SalesCoefficientGoodsReply SalesCoefficientGoodss = 1;
}